--- a/Day/test-output/emailable-report.html
+++ b/Day/test-output/emailable-report.html
@@ -8,26 +8,13 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Suite</th></tr>
-<tr><td><a href="#t0">testListener</a></td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">111</td><td></td><td></td></tr>
+<tr><th colspan="8">Default suite</th></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">41,063</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">testListener &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">Test4.Type</td><td><a href="#m0">typecard</a></td><td rowspan="1">1579596793792</td><td rowspan="1">61</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">Test2.NewTest12</td><td><a href="#m0">testLoginButton</a></td><td rowspan="1">1579673855128</td><td rowspan="1">2211</td></tr><tr class="passedeven"><td><a href="#m1">testLoginLink</a></td><td rowspan="1">1579673854334</td><td rowspan="1">792</td></tr><tr class="passedeven"><td><a href="#m2">testRegisterLink</a></td><td rowspan="1">1579673853358</td><td rowspan="1">966</td></tr></tbody>
 </table>
-<h2>testListener</h2><h3 id="m0">Test4.Type#typecard</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.IllegalStateException: The driver executable does not exist: C:\Users\A08019DIRP_C2C.02.02\eclipse-workspace\Day\src\test\resources\drivers\chromedriver.exe
-	at com.google.common.base.Preconditions.checkState(Preconditions.java:589)
-	at org.openqa.selenium.remote.service.DriverService.checkExecutable(DriverService.java:154)
-	at org.openqa.selenium.remote.service.DriverService.findExecutable(DriverService.java:149)
-	at org.openqa.selenium.chrome.ChromeDriverService.access$000(ChromeDriverService.java:36)
-	at org.openqa.selenium.chrome.ChromeDriverService$Builder.findDefaultExecutable(ChromeDriverService.java:195)
-	at org.openqa.selenium.remote.service.DriverService$Builder.build(DriverService.java:389)
-	at org.openqa.selenium.chrome.ChromeDriverService.createDefaultService(ChromeDriverService.java:118)
-	at org.openqa.selenium.chrome.ChromeDriver.&lt;init&gt;(ChromeDriver.java:105)
-	at Test4.Type.typecard(Type.java:14)
-	at java.util.ArrayList.forEach(Unknown Source)
-	at java.util.concurrent.FutureTask.run(Unknown Source)
-	at java.util.concurrent.ThreadPoolExecutor.runWorker(Unknown Source)
-	at java.util.concurrent.ThreadPoolExecutor$Worker.run(Unknown Source)
-	at java.lang.Thread.run(Unknown Source)
-... Removed 18 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">Test2.NewTest12#testLoginButton</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">Test2.NewTest12#testLoginLink</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">Test2.NewTest12#testRegisterLink</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
