--- a/Day/test-output/old/Default suite/methods.html
+++ b/Day/test-output/old/Default suite/methods.html
@@ -1,6 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="83bb8e">  <td>20/01/20 16:45:09</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestData.testDatafromExcel()[pri:0, instance:Test3.TestData@704a52ec]">testDatafromExcel</td> 
-  <td>main@1970881185</td>   <td></td> </tr>
+<tr bgcolor="b36d79">  <td>20/01/22 11:46:56</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;NewTest12.beforeTest()[pri:0, instance:Test2.NewTest12@3cb1ffe6]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@274773041</td>   <td></td> </tr>
+<tr bgcolor="b36d79">  <td>20/01/22 11:47:33</td>   <td>36359</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest12.testRegisterLink()[pri:1, instance:Test2.NewTest12@3cb1ffe6]">testRegisterLink</td> 
+  <td>main@274773041</td>   <td></td> </tr>
+<tr bgcolor="b36d79">  <td>20/01/22 11:47:34</td>   <td>37335</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest12.testLoginLink()[pri:2, instance:Test2.NewTest12@3cb1ffe6]">testLoginLink</td> 
+  <td>main@274773041</td>   <td></td> </tr>
+<tr bgcolor="b36d79">  <td>20/01/22 11:47:35</td>   <td>38129</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest12.testLoginButton()[pri:3, instance:Test2.NewTest12@3cb1ffe6]">testLoginButton</td> 
+  <td>main@274773041</td>   <td></td> </tr>
+<tr bgcolor="b36d79">  <td>20/01/22 11:47:37</td>   <td>40343</td> <td>&nbsp;</td><td title="&lt;&lt;NewTest12.afetrTest()[pri:0, instance:Test2.NewTest12@3cb1ffe6]">&lt;&lt;afetrTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@274773041</td>   <td></td> </tr>
 </table>
